# Random-Forest

./: DecisionTree.cabal  DecisionTree.hs  Main.hs  RandomForest.hs
