Name:               DecisionTree
Version:            0.1
Synopsis:           Audio/visualization for solar systems.

License:            BSD3
License-file:       license
Author:             Max Bogue
Copyright:          (c) Max Bogue 2012

build-type:         Simple
cabal-version:      >= 1.6

executable DecisionTree
    main-is:        Main.hs
    build-depends:  base,
                    aeson,
                    attoparsec,
                    bytestring,
                    ghc-prim,
                    random,
                    random-extras,
                    random-fu,
                    random-source,
                    containers,
                    text,
                    utf8-string
